
Updating with simcore changes (rev. 2269)

- Added a function "ShiftPath()" to Asim::GenCFG::Auto, to make it easy to
extract parameters passed as part of the virtual path using cfx scripts,
for example:

my/script.cfx/param1/param2/the/rest/of/the/path.cfg

In the cfx script you can now easily extract these parameters:

$param1 = Asim::GenCFG::Auto::ShiftPath();
$param2 = Asim::GenCFG::Auto::ShiftPath();

Leaving "the/rest/of/the/path" to be substituted as @BENCHMARKPATH@.
See "asim-shell help code" on GenCFG::Auto for details.

Updated "single-check-param.cfx" to use this new feature.

----------
spartha1    Date: Fri Mar 30 17:25:44 EDT 2007  CSN: CSN-asimcore-59
                  Fri Mar 30 21:25:44 UTC 2007


Directory libperl/Asim/lib/Asim/Package
 BitKeeper.pm              Locally Modified           58 

Updating with simcore changes (rev. 2270)

- Properly handle "Locally Added" and "Locally Removed" file status
for BitKeeper files

----------
spartha1    Date: Fri Mar 30 17:40:14 EDT 2007  CSN: CSN-asimcore-60
                  Fri Mar 30 21:40:14 UTC 2007


Directory modules/controller/classic
 args_x86.cpp              Locally Modified           59 

Skipping  simcore rev. 2271 since similar changes are already in place.
Updating with simcore changes (rev. 2272). 

- got rid of false warning on "unknown flags" that are actually recognized
but are in class CONTROLLER_X86_CLASS and not CONTROLLER_CLASS.

----------
spartha1    Date: Fri Mar 30 17:43:01 EDT 2007  CSN: CSN-asimcore-61
                  Fri Mar 30 21:43:01 UTC 2007


Directory libperl/AsimShell/lib/AsimShell
 Completion.pm             Locally Modified           60 
 Commands.pm               Locally Modified           60 

Directory libperl/Asim/lib/Asim/Package
 Commit.pm                 Locally Modified           60 

Updating with simcore changes (rev. 2273)

Added the "commit package all" command to commit all packages in workspace.
Removed some comments.